--- a/SimplePWGenerator/res/layout/settings_main.xml
+++ b/SimplePWGenerator/res/layout/settings_main.xml
@@ -13,8 +13,8 @@
         android:layout_gravity="center_horizontal"
         android:adjustViewBounds="true"
         android:contentDescription="@string/ott"
-        android:src="@drawable/ott_logo_banner_768x90" />
-    
+        android:src="@drawable/ott_pwg_logo_banner_768x90" />
+
     <TextView
         android:id="@+id/textView6"
         android:layout_width="match_parent"
@@ -54,6 +54,19 @@
             android:text="@string/blank4"
             android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
+
+    <ToggleButton
+        android:id="@+id/isMemorableTB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textOff="@string/memorableOFF"
+        android:textOn="@string/memorableON" />
 
     <View
         android:layout_width="fill_parent"
